--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "vitepress": "^1.0.0-alpha.29",
     "vue": "^3.2.45"
+  },
+  "dependencies": {
+    "markdown-it-katex": "^2.0.3"
   }
 }
